# rangebar

./: .gitignore  .gitmodules  .pre-commit-config.yaml  6month_validation_plan.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README-crates.md  README.md  analyze_breach_logic.py  binance_futures_coin_20250911_143100.txt  binance_futures_summary_20250911_143100.txt  binance_futures_usdc_20250911_143100.txt  binance_futures_usdc_20250911_143108.txt  binance_futures_usdt_20250911_143100.txt  breach_consistency_check.py  comprehensive_cpu_benchmark.py  comprehensive_trading_dashboard.py  corrected_verification.py  create_real_data_benchmark.py  debug_bar7_issue.py  debug_json.py  fast_statistics_fix.rs  final_real_data_benchmark.py  market_microstructure_analyzer.py  momentum_pattern_analyzer.py  post_fix_benchmark.py  production_scale_validator.py  pyproject.toml  quick_memory_demo.rs  quick_performance_test.py  range_bar_statistics.py  range_bar_validator.py  rangebar.toml  run_memory_comparison.sh  rust-toolchain.toml  rustfmt.toml  simple_validation.py  (+10 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-monitor.yml  performance.yml  publish.yml  release.yml
api/: openapi.yaml
benches/: rangebar_bench.rs
docs/planning/: comprehensive-rolling14bar-system-specification.yml  master-implementation-plan.yml
examples/: atomic_burn_tests.rs  cpu_gpu_validation.rs  data_flow_debug.rs  deterministic_alignment_test.rs  gpu_flow_fix_diagnostic.rs  gpu_tensor_debug.rs  gpu_test.rs  multi_symbol_gpu_demo.rs  precision_tolerance_test.rs  step_by_step_trace_validation.rs  tensor_cpu_cross_validation.rs
milestones/: 2025-09-09-range-bar-algorithm-correction.yaml  2025-09-10-sha256-data-integrity-verification.yaml  2025-09-12-architectural-simplification-8agent-consensus.yaml  2025-09-12-comprehensive-system-audit-overhaul.yaml  2025-09-13-multi-agent-integrity-audit-completion.yaml  2025-09-13-phase0-microstructure-enhancement-completion.yaml  2025-09-14-performance-breakthrough-100x-optimization.yaml  2025-09-14-publishing-preparation-macos-transition.yaml  2025-09-14-range-bar-visualization-achievement.yaml  2025-09-14-rust-best-practices-crates-io-readiness.yaml  2025-09-14-statistical-visualization-pipeline-validation.yaml  2025-09-14-terminology-standardization-tier1-definition.yaml  2025-09-15-mandatory-rust-code-quality-enforcement.yaml  2025-09-16-gpu-algorithmic-parity-breakthrough.yaml  2025-09-17-critical-algorithm-audit-findings.yaml  2025-09-18-ci-test-framework-resilience-enhancement.yaml  2025-09-18-rust-1.90.0-compatibility-upgrade.yaml  2025-09-18-statistics-v2-streaming-validation-framework.yaml  2025-09-18-streaming-architecture-consolidation-statistics-v2.yaml  2025-09-18-streaming-architecture-consolidation-v0.6.0.yaml  2025-09-19-bps-terminology-standardization-v0.8.0.yaml  2025-09-19-data-structure-validation-framework-v0.7.0.yaml
output/: new_line_counts.txt  original_checksums.txt  original_line_counts.txt
output/premium_analysis/tradability_analysis/: FINAL_tradability_dashboard_20250911_161426.html  enhanced_tradability_dashboard_20250911_160020.html  enhanced_tradability_dashboard_20250911_160055.html  enhanced_tradability_dashboard_20250911_161825.html  enhanced_tradability_dashboard_20250911_162034.html  enhanced_tradability_dashboard_20250911_162320.html  enhanced_tradability_dashboard_20250911_162541.html  enhanced_tradability_dashboard_20250911_162753.html  enhanced_tradability_dashboard_20250911_164611.html  tradability_dashboard_20250911_155532.html
scripts/: benchmark_runner.sh  binance_multi_market_symbol_analyzer.py  dependency_monitor.sh  production_validation.sh  profiling_tools.sh  run_large_scale_benchmark.sh
sessions/: 2025-09-18_223515_v0.6.0_streaming.txt  2025-09-19_004419_aggTrades-um-spot-data-format.txt  2025-09-19_081256_4-month-spot_tier1_batch.txt  2025-09-19_150749_non-basis-points-language-removal.txt
src/: csv_streaming.rs  fixed_point.rs  lib.rs  range_bars.rs  range_bars_debug.rs  statistics.rs  statistics.rs.bak  statistics_v2.rs  streaming_stats.rs  streaming_v2.rs  tier1.rs  types.rs
src/api/: server.rs
src/api/handlers/: rangebar.rs
src/api/models/: requests.rs  responses.rs
src/archived/: performance_optimization.rs
src/gpu/: benchmarks.rs  metal_backend.rs  mod.rs  multi_symbol.rs  multi_symbol_tests.rs  range_bars_gpu.rs
statistical_analysis/: executive_trading_summary.md  microstructure_insights.md  momentum_pattern_report.md  statistical_report.md
test_streaming/: debug_test.rs
tests/: boundary_consistency_tests.rs  bps_conversion_tests.rs  cross_year_speed_comparison.rs  integration_test.rs  large_boundary_tests.rs  minimal_breach_test.rs  multi_month_memory_tests.rs  production_streaming_validation.rs  statistics_v2_validation.rs
tests/gpu_tensor_tests/: test_atomic_comparisons.rs  test_basic_bool_ops.rs  test_bool_extraction.rs  test_comparisons.rs  test_shapes.rs
visualization/: Cargo.toml
visualization/scripts/: fetch_correct_rangebar_data.py  fetch_real_rangebar_data.py  generate_authentic_charts.py
visualization/src/: analysis.rs  data.rs  elements.rs  errors.rs  export.rs  interactive.rs  layouts.rs  lib.rs  styles.rs
