[package]
name = "rangebar-rust"
version = "0.4.1"
edition = "2024"
description = "High-performance range bar construction with aligned JSON/Arrow formats for seamless Python integration"
authors = ["Terry Li <terry@eonlabs.com>"]
license = "MIT"
homepage = "https://github.com/Eon-Labs/rangebar"
repository = "https://github.com/Eon-Labs/rangebar"
documentation = "https://github.com/Eon-Labs/rangebar#readme"

[[bin]]
name = "rangebar-export"
path = "src/bin/rangebar_export.rs"

[[bin]]
name = "rangebar-analyze"
path = "src/bin/parallel_premium_analysis.rs"

[[bench]]
name = "rangebar_bench"
harness = false

[dependencies]
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
thiserror = "2.0"
csv = "1.3"
# Async streaming dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = "2.2"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# SOTA Statistical Analysis Crates
statrs = { version = "0.17", optional = true }                           # Core statistical distributions and functions
quantiles = { version = "0.7", optional = true }                         # Streaming quantile estimation (CKMS, T-Digest)
polars = { version = "0.49", features = ["lazy", "temporal", "strings", "parquet", "csv"], optional = true }
nalgebra = { version = "0.33", optional = true }                         # Linear algebra backend for complex calculations
# Financial Time Series Analysis

# Data Validation and Schema
sha2 = { version = "0.10", optional = true }                             # Cryptographic hashing for data integrity
crc32fast = { version = "1.4", optional = true }                         # Fast CRC32 checksums
md5 = { version = "0.7", optional = true }                               # MD5 checksums for compatibility

# Performance and Memory Optimization (unused dependencies removed)

# Arrow and Parquet Support (Future Implementation)
arrow = { version = "53.0", optional = true }
parquet = { version = "53.0", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true              # Link-time optimization for better performance
codegen-units = 1       # Single codegen unit for better optimization  
overflow-checks = false # Disable overflow checks in release for speed
panic = "abort"         # Smaller binary size

[profile.dev]
overflow-checks = true  # Keep overflow checks in debug builds

[features]
default = ["statistics", "data-integrity"]
simd = []                                # Optional SIMD optimizations

# Feature groups for modular compilation
statistics = ["dep:statrs", "dep:quantiles", "dep:polars", "dep:nalgebra"]
arrow-support = ["dep:arrow", "dep:parquet"]
data-integrity = ["dep:sha2", "dep:crc32fast", "dep:md5"]

# Combined feature sets
python = ["dep:pyo3"]
full-analytics = ["statistics", "data-integrity"]
production = ["full-analytics", "arrow-support"]