[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rangebar-scripts"
version = "0.1.0" 
description = "Python scripts for Binance futures discovery and analysis"
authors = [{name = "Terry Li", email = "terry@eonlabs.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "ccxt>=4.0.0",
    "psutil>=7.0.0",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "plotly>=6.3.0",
    "kaleido>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ISC", "PIE", "T20", "SIM", "RET"]
ignore = ["E501", "B008", "B904"]
